--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="card front-face">
                 <header>
                     <span class="logo">
-                        <img src="images/logo.png" alt="Error">
-                        <h5>Master Card</h5>
+                        <img src="https://upload.wikimedia.org/wikipedia/fa/thumb/7/73/Saman_Bank_logo_%281%29.png/250px-Saman_Bank_logo_%281%29.png" alt="Error">
+                        <h5>SAMAN BANK</h5>
                     </span>
                     <img class="chip" src="images/chip.png" alt="Error">
                 </header>
@@ -28,7 +28,7 @@
 
                     <div class="valid-date">
                         <h6>Valid Thru</h6>
-                        <h5>08/08</h5>
+                        <h5>20/20</h5>
                     </div>
                 </div>
 
